fixed scrollbar beeing in the center of the page on scroll

--- a/src/components/pages/ArchivePage.css
+++ b/src/components/pages/ArchivePage.css
@@ -1,7 +1,7 @@
 @import "../../style/viewports.css";
 
 .page-wrapper.archive {
-  overflow-y: auto;
+  /* overflow-y: auto; */
   h1 {
     position: sticky;
     top: 0;
